new modification and adding ELK stack configuration